# pagser

./: .gitignore  01_intro.md  02_service.md  03_server.md  04_logging.md  05_sqlx.md  Cargo.toml  build.rs
protos/: customer_service.proto
src/: db.rs  logger.rs  main.rs
src/grpc/: customer_service.rs  mod.rs  server.rs
src/grpc/services/: customer_service.rs  mod.rs
