[package]
name = "pagser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async runtime
tokio = { version =  "1.17.0", features = ["rt-multi-thread", "macros"] }
# gRPC
tonic = "0.6.2"
prost = "0.9.0"
tokio-stream = "0.1.8"
tower = "0.4.11"
tower-http = { version = "0.3.4", features = ["trace"] }
http = "0.2.6"
# DB
sqlx = { version = "0.5.11", features = ["runtime-tokio-native-tls"] }
# logging & tracing
tracing = "0.1.31"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
tracing-appender = "0.2.0"
# utils
uuid = { version = "1.1.2", features = ["v4"] }

[build-dependencies]
tonic-build = "0.6.2"

## static linking OpenSSL for unix
[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }